syntax = "proto3";

option csharp_namespace = "ProfileGrpc";

package Profile;

service ProfileGrpcService {
  rpc GetProfileById (GetProfileRequest) returns (GetProfileReply);
  rpc GetStudentByStudentId (GetStudentByStudentIdRequest) returns (GetProfileReply);
  rpc SearchStudentIdSuggest (SearchStudentIdSuggestRequest) returns (SearchStudentIdSuggestRepply);
}

message SearchStudentIdSuggestRequest {
	string partialId = 1;
}

message SearchStudentIdSuggestRepply {
	repeated string studentId = 1;
}

message GetProfileRequest {}

message GetStudentByStudentIdRequest {
  string studentId = 1;
}

message GetProfileReply {
  string studentId = 1;
  string fullName = 2;
  string balance = 3;
  string gender = 4;
  string phoneNumber = 5;
  string Email = 6;
  string marjor = 7;
}